--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
-              <i class="far fa-star"></i>
+              <i class="fa fa-star"></i>
             </div>
             <!-- <img src="./images/user-2.png" /> -->
             <img
@@ -322,7 +322,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
-              <i class="far fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
             </div>
             <img src="./images/user-3.png" />
             <h3>Mabel Joe</h3>
