add blowup.js (Magnify Glass Zoom)

--- a/product-detail.html
+++ b/product-detail.html
@@ -27,11 +27,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <!--------- magnify glass zoom plugin ----------->
-    <script src="../plugins/magnify_glass_zoom/blowup.min.js"></script>
+    <script src="plugins/magnify_glass_zoom/blowup.min.js"></script>
     <script>
       $(document).ready(function () {
         $("#product-img").blowup();
-      })
+      });
     </script>
   </head>
   <body>
