(Almost) full link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-    <!-- Featured Categories -->
+    <!-- Featured CATEGORY'IES -->
 
     <div class="categories">
       <div class="small-container">
@@ -92,154 +92,178 @@
       <h2 class="title">Featured Products</h2>
       <div class="row">
         <div class="col-4">
-          <img src="./images/product-1.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-1.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-2.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-2.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-3.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-3.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-4.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-4.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
       </div>
       <h2 class="title">Latest Products</h2>
       <div class="row">
         <div class="col-4">
-          <img src="./images/product-5.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-5.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-6.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-6.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-7.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-7.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-8.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-8.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
       </div>
 
       <div class="row">
         <div class="col-4">
-          <img src="./images/product-9.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-9.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-10.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-10.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-11.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-11.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-12.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-12.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
       </div>
     </div>
@@ -262,7 +286,7 @@
               debitis minus!
             </small>
             <div>
-              <a href="#" class="btn">Buy Now &#8594;</a>
+              <a href="product-detail.html" class="btn">Buy Now &#8594;</a>
             </div>
           </div>
         </div>
