--- a/products.html
+++ b/products.html
@@ -33,15 +33,18 @@
 
         <nav>
           <ul id="main-menu" class="list-no-marker">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Account</a></li>
+            <li><a href="account.html">Account</a></li>
           </ul>
         </nav>
 
-        <img src="./images/cart.png" width="30" height="30" />
+        <a href="cart.html">
+          <img src="./images/cart.png" width="30" height="30" />
+        </a>
+
         <img class="menu-icon" src="./images/menu.png" />
       </div>
     </div>
@@ -62,154 +65,178 @@
 
       <div class="row">
         <div class="col-4">
-          <img src="./images/product-1.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-1.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-2.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-2.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-3.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-3.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-4.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-4">
-          <img src="./images/product-5.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
-        </div>
-        <div class="col-4">
-          <img src="./images/product-6.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
-        </div>
-        <div class="col-4">
-          <img src="./images/product-7.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-          </div>
-          <p>&dollar;50.00</p>
-        </div>
-        <div class="col-4">
-          <img src="./images/product-8.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-4.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
       </div>
 
       <div class="row">
         <div class="col-4">
-          <img src="./images/product-9.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-5.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-10.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-6.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-11.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-7.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
         <div class="col-4">
-          <img src="./images/product-12.jpg" />
-          <h4>Red Printed T-Shirt</h4>
-          <div class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <p>&dollar;50.00</p>
+          <a href="product-detail.html">
+            <img src="./images/product-8.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-4">
+          <a href="product-detail.html">
+            <img src="./images/product-9.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
+        </div>
+        <div class="col-4">
+          <a href="product-detail.html">
+            <img src="./images/product-10.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
+        </div>
+        <div class="col-4">
+          <a href="product-detail.html">
+            <img src="./images/product-11.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
+        </div>
+        <div class="col-4">
+          <a href="product-detail.html">
+            <img src="./images/product-12.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>&dollar;50.00</p>
+          </a>
         </div>
       </div>
 
