--- a/account.html
+++ b/account.html
@@ -33,15 +33,17 @@
 
         <nav>
           <ul id="main-menu" class="list-no-marker">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Account</a></li>
+            <li><a href="account.html">Account</a></li>
           </ul>
         </nav>
 
-        <img src="./images/cart.png" width="30" height="30" />
+        <a href="cart.html">
+          <img src="./images/cart.png" width="30" height="30" />
+        </a>
         <img class="menu-icon" src="./images/menu.png" />
       </div>
     </div>
