--- a/cart.html
+++ b/cart.html
@@ -33,15 +33,17 @@
 
         <nav>
           <ul id="main-menu" class="list-no-marker">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Account</a></li>
+            <li><a href="account.html">Account</a></li>
           </ul>
         </nav>
 
-        <img src="./images/cart.png" width="30" height="30" />
+        <a href="cart.html">
+          <img src="./images/cart.png" width="30" height="30" />
+        </a>
         <img class="menu-icon" src="./images/menu.png" />
       </div>
     </div>
@@ -72,8 +74,8 @@
                 </div>
               </div>
             </td>
-            <td><input type="number" value="1" /></td>
-            <td>$50.00</td>
+            <td><input type="number" value="2" /></td>
+            <td>$100.00</td>
           </tr>
           <tr>
             <td>
@@ -114,7 +116,7 @@
         <table>
           <tr>
             <td>Subtotal</td>
-            <td>$150.00</td>
+            <td>$200.00</td>
           </tr>
           <tr>
             <td>Tax</td>
